# The Performance Counter Library
project('libpfc', ['c', 'cpp'],
        version:                 '0.0.0',
        meson_version:           '>=0.41.0',
        license:                 'MIT',
        default_options:         ['c_std=gnu99', 'cpp_std=c++11'])

subdir('include')
subdir('kmod')
subdir('src')
